Wed Aug 10 07:37:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/JAWS2/JAWS/IO.cpp:
        * apps/JAWS2/JAWS/IO_Acceptor.cpp:
        * apps/JAWS2/JAWS/IO_Handler.h:
          Fixed compile errors in Cygwin build

Wed Aug 10 07:27:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/JAWS2/JAWS/Reaper.h:
          Fixed compile error in single threaded builds

Tue Aug  9 16:57:09 2005  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/MakeProjectCreator/config/taolib.mpb:
          Added the codeset project to the "after" list to ensure the
          codeset library is built for any project that also depends on
          TAO. This is necessary because there are some executables that
          depend on libTAO and may therefore depend on libTAO_Codeset, but
          do not include taoexe in the MPC base project list. For example
          some of the CIAO executables have no need for the build elements
          brought in by taoidldefaults base project.

Tue Aug  9 11:11:50 2005  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/MakeProjectCreator/config/negotiate_codesets.mpb:
          Removed unused compiler macro.

        * bin/MakeProjectCreator/config/orbsvcsexe.mpb:
        * bin/MakeProjectCreator/config/rt_client.mpb:
        * bin/MakeProjectCreator/config/rt_server.mpb:
          Added dependency on negotiate_codesets feature so that the
          TAO_Codeset library will be added in the correct order,
          if desired.

        * bin/MakeProjectCreator/config/taoexe.mpb:
          Added Codeset project to the After list to ensure that the
          Codeset library is available for dynamic linking for those
          applications that require it.

Tue Aug  9 10:48:39 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

	* ace/OS_NS_stdio.cpp (snprintf): Added a wchar_t version of
	  snprintf().  Thanks to Simon Massey for reporting this.

Tue Aug  9 13:22:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
