@@ -1022,6 +1022,7 @@ ACE_OS::vsprintf (char *buffer, const char *format, va_list argptr)
 ACE_INLINE int
 ACE_OS::vsnprintf (char *buffer, size_t maxlen, const char *format, va_list ap)
 {
+#if defined (ACE_HAS_SNPRINTF)
   int result = 0;
   
 #  if !defined (ACE_WIN32) || (defined (__BORLANDC__) && (__BORLANDC__ >= 0x600))
@@ -1038,9 +1039,16 @@ ACE_OS::vsnprintf (char *buffer, size_t maxlen, const char *format, va_list ap)
   // Win32 doesn't 0-terminate the string if it overruns maxlen.
   if (result == -1)
     buffer[maxlen-1] = '\0';
-#endif
 
   return result;
+#endif
+#else
+  ACE_UNUSED_ARG (buffer);
+  ACE_UNUSED_ARG (maxlen);
+  ACE_UNUSED_ARG (format);
+  ACE_UNUSED_ARG (ap);
+  ACE_NOTSUP_RETURN (-1);
+#endif /* ACE_HAS_SNPRINTF */
 }
 
 #if defined (ACE_HAS_WCHAR)
