@@ -942,11 +942,18 @@ ACE_Process_Options::command_line (const ACE_TCHAR *format, ...)
   if (command_line_buf_len_ < 1)
     return -1;
 
+#if defined (ACE_HAS_SNPRINTF)
   // sprintf the format and args into command_line_buf__.
   ACE_OS::vsnprintf (command_line_buf_,
                      command_line_buf_len_ - 1,
                      format,
                      argp);
+#else
+  // sprintf the format and args into command_line_buf__.
+  ACE_OS::vsprintf (command_line_buf_,
+                    format,
+                    argp);
+#endif
 
   // Useless macro.
   va_end (argp);
